cargo-features = ["edition2024"]

[package]
name = "rustaceo_libre"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2024"

[dependencies]
ink = { version = "5.1.1", default-features = false }
base64ct = "1.6.0"

[dev-dependencies]
ink_e2e = { version = "5.1.1" }
parity-scale-codec = "3.6.12"
scale-info = "2.11.2"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
